# nox

./: CLAUDE.md  Cargo.toml  README.md
.claude/audits/: implementation-audit.md  reference-gaps-2026-03-16.md
.claude/plans/: cost-model-redesign.md  release-2026-05-12.md  restructure-nox-2026-03-26.md  vm-completion-2026-03-27.md
cli/: Cargo.toml  main.rs
docs/explanation/: README.md  bitwise-patterns.md  completeness.md  confluence.md  content-addressing.md  decider.md  field-patterns.md  five-algebras.md  hint.md  jets.md  layers.md  lineage.md  nouns.md  nox.md  proof-native.md  (+5 more)
graph/: nox.md
jets/: README.md  decider.md  genies.md  jali.md  kuro.md  nebu.md  state.md  trop.md
metal/: Cargo.toml
metal/src/: main.rs
reference/: README.md  encoding.md  jets.md  nouns.md  patterns.md  reduction.md  state-operations.md  trace.md  vm.md
roadmap/: README.md  algebra-polymorphism.md  binary-jets.md  decider-jet.md  implementation-audit.md  recursive-jets.md  transformer-jets.md
rs/: Cargo.toml  call.rs  hint.rs  lib.rs  main.rs  noun.rs  reduce.rs  trace.rs
rs/noun/: arena.rs  hash.rs  inner.rs  mod.rs  order.rs  tag.rs
rs/patterns/: add.rs  and.rs  axis.rs  branch.rs  call.rs  compose.rs  cons.rs  eq.rs  hash.rs  hint.rs  inv.rs  look.rs  lt.rs  mod.rs  mul.rs  not.rs  quote.rs  shl.rs  sub.rs  xor.rs
rs/src/: hint.rs  lib.rs  noun.rs  reduce.rs
specs/: README.md  encoding.md  jets.md  patterns.md  reduction.md  state-operations.md  trace.md  vm.md
src/: encode.rs  focus.rs  hint.rs  jet.rs  lib.rs  memo.rs  noun.rs  reduce.rs  trace.rs
(+49 files in other folders)
