# ---
# tags: nox, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "nox-cli"
version = "0.1.0"
edition = "2024"
description = "nox command-line interface"
license = "Cyber"

[[bin]]
name = "nox"
path = "main.rs"

[dependencies]
nox = { path = "../rs" }
nebu = { path = "../../nebu/rs" }
