# ---
# tags: nox, config
# crystal-type: source
# crystal-domain: comp
# ---
[package]
name = "nox"
version = "0.1.0"
edition = "2024"
description = "proof-native virtual machine over the Goldilocks field"
license = "Cyber"

[lib]
path = "lib.rs"

[[bin]]
name = "nox"
path = "main.rs"

[dependencies]
nebu = { path = "../../nebu/rs" }
hemera = { package = "cyber-hemera", path = "../../hemera/rs" }
